texlive-bin (2023.20230311.66589-5) unstable; urgency=medium

  * Split luajit based binaries into texlive-binaries-sse2 to make
    TL usable on non-sse2 capable CPU's at all (Closes: #1041148).
  * Remove kfreebsd* from LuaJIT arches.

 -- Hilmar Preusse <hille42@web.de>  Sat, 09 Sep 2023 11:57:07 +0200

texlive-bin (2023.20230311.66589-4) unstable; urgency=medium

  * Add "Breaks: texlive-formats-extra (<< 2023.20230613)" to make
    sure hitex reads a fixed file hiplainpage.tex (Closes: #1041508).

 -- Hilmar Preusse <hille42@web.de>  Sun, 03 Sep 2023 08:54:53 +0200

texlive-bin (2023.20230311.66589-3) unstable; urgency=medium

  * Upload to unstable.

 -- Hilmar Preusse <hille42@web.de>  Sun, 27 Aug 2023 23:46:07 +0200

texlive-bin (2023.20230311.66589-2) experimental; urgency=medium

  * Add fixes for bibtex(8) to (hopefully) fix build failure on
    armhf. Bump bibtex-x to version 4.01.

 -- Hilmar Preusse <hille42@web.de>  Mon, 24 Jul 2023 23:48:05 +0200

texlive-bin (2023.20230311.66589-1) experimental; urgency=medium

  * New upstream snapshot made for TL 2023.
    - Remove sources of dvisvgm from orig.tar.xz, we don't build
      it anyways.
    - New luatex version
      + Fixes issues with discretionaries when priorities are used
        (Closes: #1018206).
      + Contains fix for CVE-2023-32668 (Closes: #1041149), add Breaks
        statement for old context.
    - Refresh / Disable patches.
  * Fix BD:
    - Add libpotrace-dev
    - Replace libfontconfig1-dev by libfontconfig-dev
  * Fix / Add Lintian Overrides.
  * Convert d/copyright into DEP5.
  * Add syntax fixes for:
    - luatex.1 (Closes: #1037553).
    - bibtex.original.1 (Closes: #1039975).
    - detex.1 (Closes: #1039976).
    - kpsewhich.1 (Closes: #1039977)
    - axohelp.1 (Closes: #1039978)

 -- Hilmar Preusse <hille42@web.de>  Tue, 18 Jul 2023 23:21:48 +0200

texlive-bin (2022.20220321.62855-5) unstable; urgency=medium

  [ Hilmar Preusse ]